--- a/app/views/exam/student_batch_rank_pdf.html.erb
+++ b/app/views/exam/student_batch_rank_pdf.html.erb
@@ -29,18 +29,6 @@
     <div id="pdf-info">
       <% unless @students.empty? %>
         <% unless @grouped_exams.empty? %>
-          <% ordered_scores = [] %>
-          <% student_scores = [] %>
-          <% @students.each do|student| %>
-            <% score = GroupedExamReport.find_by_student_id_and_batch_id_and_score_type(student.id,student.batch_id,"c") %>
-            <% marks = 0 %>
-            <% unless score.nil? %>
-              <% marks = score.marks %>
-            <% end %>
-            <% ordered_scores << marks %>
-            <% student_scores << [student.id,marks] %>
-          <% end %>
-          <% ordered_scores = ordered_scores.compact.uniq.sort.reverse %>
           <% c = 'even' %>
           <table id="pdf-table" width="100%" cellspacing="0">
             <tr class="table-header">
@@ -51,8 +39,7 @@
               <td><%= t('rank') %></td>
             </tr>
             <% i = 0 %>
-            <% @students.each_with_index do |student,ind| %>
-              <% marks = 0 %>
+            <% @ranked_students.each_with_index do |student,ind| %>
               <% if i== 23 %>
                 <% i= 0 %>
                 <tr class="page-break"><td colspan="3"></td></tr>
@@ -68,15 +55,10 @@
               <% end %>
               <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
                 <td class="col-pdf"><%= ind+1 %></td>
-                <td class="col-pdf"><%= student.full_name %></td>
-                <td class="col-pdf"><%= student.admission_no.present? ? student.admission_no : "-" %></td>
-                <% student_scores.each do|student_score| %>
-                  <% if student_score[0]==student.id %>
-                    <% marks = student_score[1] %>
-                  <% end %>
-                <% end %>
-                <td class="col-pdf"><%= marks %></td>
-                <td class="col-pdf"><%= ordered_scores.index(marks) + 1 %></td>
+                <td class="col-pdf"><%= student[3].full_name %></td>
+                <td class="col-pdf"><%= student[3].admission_no.present? ? student[3].admission_no : "-" %></td>
+                <td class="col-pdf"><%= student[1] %></td>
+                <td class="col-pdf"><%= student[0] %></td>
               </tr>
               <% i+=1 %>
             <% end %>
