--- a/app/views/exam/student_school_rank.html.erb
+++ b/app/views/exam/student_school_rank.html.erb
@@ -43,18 +43,6 @@
       <% unless @courses.empty? %>
         <% unless @students.empty? %>
           <% unless @grouped_exams.empty? %>
-            <% ordered_scores = [] %>
-            <% student_scores = [] %>
-            <% @students.each do|student| %>
-              <% score = GroupedExamReport.find_by_student_id_and_batch_id_and_score_type(student.id,student.batch_id,"c") %>
-              <% marks = 0 %>
-              <% unless score.nil? %>
-                <% marks = score.marks %>
-              <% end %>
-              <% ordered_scores << marks %>
-              <% student_scores << [student.id,marks] %>
-            <% end %>
-            <% ordered_scores = ordered_scores.compact.uniq.sort.reverse %>
             <table id="listing" width="100%" cellpadding="1" cellspacing="1">
               <tr class="tr-head">
                 <td><%= t('sl_no') %></td>
@@ -64,23 +52,23 @@
                 <td><%= t('marks') %></td>
                 <td><%= t('rank') %></td>
               </tr>
-              <% @students.each_with_index do |student,i| %>
+              <% if params[:page].present? %>
+                <% i = (params[:page].to_i - 1) * 25 %>
+              <% else %>
+                <% i=0 %>
+              <% end %>
+              <% @ranked_students.each do |student| %>
                 <tr class="tr-<%= cycle('odd', 'even') %>">
-                  <td class="col-1"><%= i+1 %></td>
-                  <td class="col-2"><%= student.full_name %></td>
-                  <td class="col-2"><%= student.batch.full_name %></td>
-                  <td class="col-1"><%= student.admission_no.present? ? student.admission_no : "-" %></td>
-                  <% percentage = 0 %>
-                  <% student_scores.each do|student_score| %>
-                    <% if student_score[0]==student.id %>
-                      <% percentage = student_score[1] %>
-                    <% end %>
-                  <% end %>
-                  <td class="col-1"><%= percentage %></td>
-                  <td class="col-1"><%= ordered_scores.index(percentage) ? ordered_scores.index(percentage) + 1 : "-" %></td>
+                  <td class="col-1"><%= i=i+1 %></td>
+                  <td class="col-2"><%= student[3].full_name %></td>
+                  <td class="col-2"><%= student[3].batch.full_name %></td>
+                  <td class="col-1"><%= student[3].admission_no.present? ? student[3].admission_no : "-" %></td>
+                  <td class="col-1"><%= student[1] %></td>
+                  <td class="col-1"><%= student[0] %></td>
                 </tr>
               <% end %>
             </table>
+            <%= will_paginate @ranked_students %>
           <% else %>
             <p class="flash-msg"><%= t('no_grouped_exams_in_this_school') %></p>
           <% end %>
