--- a/app/views/exam/student_school_rank_pdf.html.erb
+++ b/app/views/exam/student_school_rank_pdf.html.erb
@@ -30,18 +30,6 @@
       <% unless @courses.empty? %>
         <% unless @students.empty? %>
           <% unless @grouped_exams.empty? %>
-            <% ordered_scores = [] %>
-            <% student_scores = [] %>
-            <% @students.each do|student| %>
-              <% score = GroupedExamReport.find_by_student_id_and_batch_id_and_score_type(student.id,student.batch_id,"c") %>
-              <% marks = 0 %>
-              <% unless score.nil? %>
-                <% marks = score.marks %>
-              <% end %>
-              <% ordered_scores << marks %>
-              <% student_scores << [student.id,marks] %>
-            <% end %>
-            <% ordered_scores = ordered_scores.compact.uniq.sort.reverse %>
             <% c = 'even' %>
             <% page_val=24 %>
             <% i=0 %>
@@ -54,8 +42,7 @@
                 <td><%= t('marks') %></td>
                 <td><%= t('rank') %></td>
               </tr>
-              <% @students.each_with_index do |student,ind| %>
-                <% percentage = 0 %>
+              <% @ranked_students.each_with_index do |student,ind| %>
                 <% if (i+1)%(page_val.to_i) == 0 %>
                   <% i=0 %>
                   <% page_val=26 %>
@@ -74,16 +61,11 @@
                   <% i=i+1 %>
                 <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
                   <td class="col-pdf"><%= ind+1 %></td>
-                  <td class="col-pdf"><%= student.full_name %></td>
-                  <td class="col-pdf"><%= student.batch.full_name %></td>
-                  <td class="col-pdf"><%= student.admission_no.present? ? student.admission_no : "-" %></td>
-                  <% student_scores.each do|student_score| %>
-                    <% if student_score[0]==student.id %>
-                      <% percentage = student_score[1] %>
-                    <% end %>
-                  <% end %>
-                  <td class="col-pdf"><%= percentage %></td>
-                  <td class="col-pdf"><%= ordered_scores.index(percentage) ? ordered_scores.index(percentage) + 1 : "-" %></td>
+                  <td class="col-pdf"><%= student[3].full_name %></td>
+                  <td class="col-pdf"><%= student[3].batch.full_name %></td>
+                  <td class="col-pdf"><%= student[3].admission_no.present? ? student[3].admission_no : "-" %></td>
+                  <td class="col-pdf"><%= student[1] %></td>
+                  <td class="col-pdf"><%= student[0] %></td>
                 </tr>
               <% end %>
             </table>
