--- a/public/stylesheets/exam/student_attendance_rank.css
+++ b/public/stylesheets/exam/student_attendance_rank.css
@@ -80,6 +80,11 @@ tr.tr-head{
 td.col-1{
     padding: 5px;
 }
+table#listing td.col-2 {
+    padding:5px 5px 5px 10px;
+    text-align:left;
+    width:20%;
+}
 td.col-2{
     text-align:left;
     padding: 5px;
@@ -104,4 +109,18 @@ td.col-4{
     margin: 0 auto;
     overflow: auto;
     width: 100%;
+}
+tr.tr-head a{
+    background: #fff;
+    color:#990a10;
+    font-weight:bold;
+    text-align:left;
+    text-decoration:none;
+}
+.tr-head th{
+    padding:5px 5px 5px 10px;
+
+}
+.sortheader img{
+    border:0px;
 }
