--- a/app/views/finance/income_list_pdf.erb
+++ b/app/views/finance/income_list_pdf.erb
@@ -36,7 +36,7 @@
   </div>
   <div class="section1 row" >
     <center>
-      <table id="pdf-table">
+      <table id="pdf-table" width="100%">
         <tr class="table-header">
           <td class="col-pdf sl_no"><%= t('sl_no') %></td>
           <td class="col-pdf name"> <%= t('name') %> </td>
@@ -57,7 +57,7 @@
   <% @incomes.each_with_index do |d,i| %>
     <div class="section1 row" >
       <center>
-        <table id="pdf-table">
+        <table id="pdf-table" width="100%">
           <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
             <td class="col-pdf sl_no"><%= i+1 %></td>
             <td class="col-pdf name"><%= d.title %></td>
@@ -73,7 +73,7 @@
   <% end %>
   <div class="section1 row" >
     <center>
-      <table id="pdf-table">
+      <table id="pdf-table" width="100%">
         <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
           <td class="col-pdf sl_no">&nbsp;</td>
           <td class="col-pdf name">&nbsp;</td>
