--- a/app/views/exam/previous_batch_exams.html.erb
+++ b/app/views/exam/previous_batch_exams.html.erb
@@ -36,7 +36,7 @@
    </label>
    <div class="text-input-bg">
   <%= select :course, :course_id,
-        Course.active.map {|b| [b.code, b.id]},
+        Course.active.map {|b| [b.full_name, b.id]},
         {:prompt => "#{t('select_a_course')}"},
         {:onChange => "#{remote_function(:url => {:action => "list_inactive_batches"},
         :with => "'course_id='+ value",
