timetable entries editing confirmation for ongoing timetable
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3476 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/timetable/update_timetable.html.erb
+++ b/app/views/timetable/update_timetable.html.erb
@@ -32,6 +32,10 @@
       <li>
         <%= link_to t('edit_entries'),:controller=>:timetable_entries,:action => "new",:timetable_id=>@timetable.id %>
       </li>
+    <% else %>
+      <li>
+        <%= link_to t('edit_entries'),{:controller=>:timetable_entries,:action => "new",:timetable_id=>@timetable.id}, :class => 'delete-button',:confirm=>t("edit_current_tte_confirm") %>
+      </li>
     <% end %>
     <% if @removable %>
       <li>
