BUG #3346 style issue fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3483 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/income_list_pdf.erb
+++ b/app/views/finance/income_list_pdf.erb
@@ -40,7 +40,7 @@
         <tr class="table-header">
           <td class="col-pdf sl_no"><%= t('sl_no') %></td>
           <td class="col-pdf name"> <%= t('name') %> </td>
-          <td class="col-pdf desc"> <%= t('description') %> </td>
+          <td class="col-pdf desc"> Desc. </td>
           <td class="col-pdf rcpt_no"> <%= t('receipt_no') %> </td>
           <td class="col-pdf amnt"><%= "#{t('amount')}( #{currency})" %></td>
           <td class="col-pdf t_date"> <%= t('transaction_date') %></td>
