news text removed from sms settings
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3488 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/sms/settings.html.erb
+++ b/app/views/sms/settings.html.erb
@@ -55,7 +55,7 @@
   </li>  </div>
       <div class="name_list<%=cycle('odd', 'even')%>"><li>
   <label><%= sms.check_box :news_events_enabled, :checked=>@news_events_sms_enabled.is_enabled %>
-  <div class="att_list_names"><%= t('news_events') %></div> </label>
+  <div class="att_list_names"><%= t('events') %></div> </label>
   </li>  </div>
       <div class="name_list<%=cycle('odd', 'even')%>"><li>
   <label><%= sms.check_box :sms_parents_enabled, :checked=>@parents_sms_enabled.is_enabled %>
