changed universal date format (default) of fedena to yyyy-mm-dd
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3490 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
       <%= render :partial=>mod.camelize.constantize.send("application_layout_header") %>
     <% end %>
 
-    <%= calendar_date_select_includes 'red' %>
+    <%= calendar_date_select_includes 'red', 'iso_date' %>
 
     <%= javascript_include_tag "calendar_date_select/locale/#{I18n.locale}.js" unless I18n.locale==:en %>
     <%= yield :head %>
