--- a/app/views/exam/generate_reports.html.erb
+++ b/app/views/exam/generate_reports.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('generate_reports') %></h3>
   <div id="app-back-button">
@@ -28,6 +28,7 @@
 <div id="inner-tab-menu">
   <ul>
     <li><%= link_to "#{t('generate_previous_reports')}", {:controller => "exam", :action => "generate_previous_reports"}, :class=> 'user_button' %></li>
+    <li><%= link_to "View Scheduled Jobs", scheduled_task_path(:job_object=>"Batch",:job_type=>"1"), :class=> 'user_button' %></li>
   </ul>
 </div>
 <div id="page-yield">
@@ -42,7 +43,7 @@
         <div  class="text-input-bg">
           <%= select :report, :course_id,
             Course.active.map {|b| [b.full_name, b.id]},{:prompt => "#{t('select_a_course')}"},{:onChange => "#{remote_function(:url => {:action => "list_batch_groups"}, :with => "'course_id='+value")}"}%></div></div>
-        <div id="batch_group_list"></div>
+      <div id="batch_group_list"></div>
       <%= submit_tag "", :value => "►#{t('generate')}", :class => "submit_button" %>
     <% end %>
     <div class="extender"></div>
