--- a/public/stylesheets/finance/income_list_pdf.css
+++ b/public/stylesheets/finance/income_list_pdf.css
@@ -23,6 +23,7 @@
 .page-blank{
     width: 100%;
     float: left;
+    border-top: 1px solid #ADACAB;
 }
 .page_break{
     margin-top: 60px;
@@ -111,10 +112,12 @@ h2.heading{
 }
 tr.even{
     border: 1px solid #ADACAB;
+    border-bottom: 0;
 }
 
 tr.odd{
     border: 1px solid #ADACAB;
+    border-bottom: 0;
 }
 
 .even td{
@@ -123,6 +126,7 @@ tr.odd{
     border: 1px solid #ADACAB;
     border-right: 0px solid #fff;
     border-top: 0px solid #fff;
+    border-bottom: 0;
 
 }
 
@@ -131,6 +135,7 @@ tr.odd{
     border: 1px solid #ADACAB;
     border-right: 0px solid #fff;
     border-top: 0px solid #fff;
+    border-bottom: 0;
 
 }
 
