style issue fixed in income list pdf
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3493 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/income_list_pdf.erb
+++ b/app/views/finance/income_list_pdf.erb
@@ -73,7 +73,7 @@
   <% end %>
   <div class="section1 row" >
     <center>
-      <table id="pdf-table" width="100%">
+      <table id="pdf-table" class="grand_total" width="100%">
         <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
           <td class="col-pdf sl_no">&nbsp;</td>
           <td class="col-pdf name">&nbsp;</td>
